# bevy_input

./: Cargo.toml  README.md
.cargo/: config.toml
assets/bindings/: example.bindings
examples/: multiplayer.rs  serialize.rs  singleplayer.rs
src/: action_map.rs  app_ext.rs  bindings_loader.rs  input.rs  lib.rs  macros.rs  main.rs  plugin.rs  validation.rs
