[package]
name = "bevy_input"
version = "0.1.0"
authors = ["SecretPocketCat <jiridexterhanc@gmail.com>"]
edition = "2021"

[features]
default = ["validate", "serialize"]
multiplayer = []
serialize = ["serde", "bevy/serialize", "ron", "anyhow", "futures-lite", "bevy_extensions"]
validate = ["itertools"]

[dependencies]
bevy = { version = "0.6.1", default-features = false, features = ["bevy_gilrs"] }
serde = { version = "1.0.130", features = ["derive"], optional = true }
ron = { version = "0.7.0", optional = true }
anyhow = { version = "*", optional = true }
itertools = { version = "0.10.1", optional = true }
futures-lite = { version = "*", optional = true }
bevy_extensions = { git = "https://github.com/SecretPocketCat/bevy_extensions", optional = true }

[dev-dependencies]
bevy = { version = "0.6.1" }
bevy-inspector-egui = { git = "https://github.com/jakobhellermann/bevy-inspector-egui", branch = "bevy-main" }
pretty_assertions = "1.0.0"
test-case = "1.2.0"

[[example]]
name = "singleplayer"
path = "examples/singleplayer.rs"
required-features = []

[[example]]
name = "multiplayer"
path = "examples/multiplayer.rs"
required-features = ["multiplayer"]

[[example]]
name = "serialize"
path = "examples/serialize.rs"
required-features = [ "serialize"]
