[package]
name = "bevy_input"
version = "0.2.0"
authors = ["SecretPocketCat <jiridexterhanc@gmail.com>"]
edition = "2021"

[features]
default = []
serialize = ["serde", "bevy/serialize", "ron", "anyhow", "futures-lite"]

[dependencies]
bevy = { version = "0.7.0", default-features = false, features = [
    "bevy_gilrs",
] }
bevy_extensions = { git = "https://github.com/SecretPocketCat/bevy_extensions" }
itertools = { version = "0.10.1" }
serde = { version = "1.0.130", features = ["derive"], optional = true }
ron = { version = "0.7.0", optional = true }
anyhow = { version = "*", optional = true }
futures-lite = { version = "*", optional = true }

[dev-dependencies]
bevy = { version = "0.7.0" }
bevy-inspector-egui = "0.10.0"
pretty_assertions = "1.0.0"
test-case = "2.0.2"

[[example]]
name = "singleplayer"
path = "examples/singleplayer.rs"
required-features = []

[[example]]
name = "multiplayer"
path = "examples/multiplayer.rs"
required-features = []

[[example]]
name = "serialize"
path = "examples/serialize.rs"
required-features = ["serialize"]
